--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
 <button class="w3-bar-item w3-button" onclick="openKota('Welcome')">Pembuka</button>
 <button class="w3-bar-item w3-button" onclick="openKota('Top')">Skill</button>
 <button class="w3-bar-item w3-button" onclick="openKota('Bottom')">Pasif</button>
+  <div class="w3-dropdown-hover">
+    <button class="w3-button">Build</button>
+    <div class="w3-dropdown-content w3-bar-block w3-card-4">
 <button class="w3-bar-item w3-button" onclick="openKota('Left')">Weapon</button>
 <button class="w3-bar-item w3-button" onclick="openKota('Right')">Artifact</button>
 <button class="w3-bar-item w3-button" onclick="openKota('Zoom')">TeamComp</button>
 <button class="w3-bar-item w3-button" onclick="openKota('Opacity')">My Build</button>
+    </div>
+  </div>
 <button class="w3-bar-item w3-button" onclick="openKota('Fading')">Penutup</button>
 <button class="w3-bar-item w3-button" onclick="openKota('Profile')">Profile</button>
 </div>
