--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 
-<body bgcolor="pink">
+<body background="BG.jpg" style="background-repeat:no-repeat; background-attachment:fixed">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="w3.css">
 
+<div class="w3-top">
 <div>
 <center>
 <img src="A.jpg" style="width:100%">
@@ -27,6 +28,8 @@
 <button class="w3-bar-item w3-button" onclick="openKota('Fading')">Penutup</button>
 <button class="w3-bar-item w3-button" onclick="openKota('Profile')">Profile</button>
 </div>
+</div>
+<br><br><br><br><br><br><br><br><br><br>
 
 <div id="Welcome" class="w3-container kota w3-animate-zoom" style="display:block">
 <center>
