--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <div>
 <center>
-<img src="A.jpg" style="width:100%">
+<img src="Ai.jpg" style="width:100%">
 </div>
 
 <div class="w3-bar w3-blue">
